--- a/plugin.xml
+++ b/plugin.xml
@@ -36,6 +36,17 @@ Apache 2.0 License
         <source-file
             src="src/android/BXLService.java"
             target-dir="src/com/bxl/service/phonegap" />
+        
+        <config-file target="AndroidManifest.xml" parent="/manifest">
+            <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
+            <uses-permission android:name="android.permission.BLUETOOTH" />
+            <uses-permission android:name="android.permission.WAKE_LOCK" />
+            <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
+            <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+
+            <uses-feature android:name="android.hardware.bluetooth" android:required="false" />
+            <uses-feature android:name="android.hardware.wifi" android:required="false" />
+        </config-file>
 
         <lib-file
             arch="device"
