--- a/plugin.xml
+++ b/plugin.xml
@@ -38,6 +38,12 @@ Apache 2.0 License
         <source-file
             src="src/android/BXLService.java"
             target-dir="src/com/bxl/service/phonegap" />
+            
+        <config-file target="res/xml/config.xml" parent="/*">
+            <feature name="BXLService">
+                <param name="android-package" value="com.bxl.service.phonegap.BXLService" />
+            </feature>
+        </config-file>
         
         <config-file target="AndroidManifest.xml" parent="/manifest">
             <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
